# de-zoomcamp-project-steam-games

./: .env.example  .gitignore  README.md  crontab.txt  gcs_to_bq.py  ingest_game_details.py  ingest_game_list.py  ingest_game_reviews.py  main.py  pyproject.toml  test.json  test.py  upload_raw_to_gcs.py
dbt/steam_games_dbt/: dbt_project.yml
dbt/steam_games_dbt/models/marts/: mart_steam_appdetails.sql  mart_steam_categories.sql  mart_steam_details_reviews.sql  mart_steam_genres.sql  mart_steam_reviews.sql
dbt/steam_games_dbt/models/staging/: sources.yml  stg_steam_appdetails.sql  stg_steam_catalog.sql  stg_steam_reviews.sql
scripts/: gcs_to_bq.py  ingest_game_details.py  ingest_game_list.py  ingest_game_reviews.py  upload_raw_to_gcs.py
