[project]
name = "steam-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.7",
    "dotenv>=0.9.9",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.10.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]
